<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <!-- user info -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/torrent_card"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/hAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:contentDescription="@string/gks_Avatar"
            android:scaleType="fitCenter"
            android:src="@drawable/avatar_default" />

        <LinearLayout
            android:id="@+id/hWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:minWidth="250dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/userNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gks_username"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gks_color_userName"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userclassField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/gks_class"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/gks_color_userClass"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/upField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gks_GoLeft"
                    android:textColor="@color/gks_color_GoLeft"
                    android:textSize="10sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/hGoLeftLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/uploaded"
                    android:textColor="#888"
                    android:textSize="10sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/downField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gks_GoLeft"
                    android:textColor="@color/gks_color_UpLeft"
                    android:textSize="10sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/downloaded"
                    android:textColor="#888"
                    android:textSize="10sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/ratioField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gks_GoLeft"
                    android:textColor="@color/gks_color_ratio"
                    android:textSize="10sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/TextView08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/ratio"
                    android:textColor="#888"
                    android:textSize="10sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="#33000000" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/hLastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="..."
            android:textColor="#66000000"
            android:textSize="9sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userclassField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/userclass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/karmaField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/karma"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/auraField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/aura"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- user graph dl -->

    <LinearLayout
        android:id="@+id/GraphLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chartratio"
        android:background="@drawable/torrent_card"
        android:orientation="horizontal" >
    </LinearLayout>

    <!-- freeleech -->

    <LinearLayout
        android:id="@+id/LinearLayoutFL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GraphLayout"
        android:layout_below="@+id/linearLayout2"
        android:background="@drawable/torrent_card"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/freeLeechNameField"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/gks_freeLeeh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gks_color_userName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/freeLeechField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/gks_freeLeeh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gks_color_userName"
            android:textStyle="bold" />

    </LinearLayout>

    <WebView
        android:id="@+id/chartratio"
        android:layout_width="fill_parent"
        android:layout_height="181dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LinearLayoutFL"
        android:background="#DDD"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:minHeight="200dp" />

</RelativeLayout>