<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
     android:orientation="vertical"
    >

    <!-- exact string -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
   
	    <TextView
	        android:id="@+id/fexact"
	        style="?android:attr/textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/exact" />
	
	    <CheckBox
	        android:id="@+id/filter_checkBoxExact"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    
 	</LinearLayout>
 	
    <!-- filter category -->
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	     <TextView
	        android:id="@+id/fcategory"
	        style="?android:attr/textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/category" />
	     <Spinner
		    android:id="@+id/filter_category"
		    android:layout_width="100dp"
		    android:layout_height="36dp"
		    android:entries="@array/category"
	     />
    </LinearLayout>
    
 	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/fsortby"
	        style="?android:attr/textAppearanceLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sort_by" />
	    <Spinner
		    android:id="@+id/filter_sort"
		    android:layout_width="100dp"
		    android:layout_height="36dp"
		    android:entries="@array/sortby"
	     />
	    <Spinner
		    android:id="@+id/filter_order"
		    android:layout_width="100dp"
		    android:layout_height="36dp"
		    android:entries="@array/order"
	     />
	    
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
    </LinearLayout>
</LinearLayout>