<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity"
    android:orientation="vertical" 
    android:background="#e8e8e8">

   
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

        <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/torrent_card"
                        android:layout_margin="3dp"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/app_name"
                            android:textColor="#012f54"
                            android:textSize="24sp"/>

                    <TextView
                            android:id="@+id/appVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="App version"
                            android:textColor="#66000000"
                            android:textSize="24sp"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center">

                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="46dp"
                                android:text="Changelog"
                                android:id="@+id/btnChgLog"
                                android:layout_gravity="center"
                                
                                android:textColor="#FFF"
                                android:textSize="16sp"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"/>

                       
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/torrent_card"
                        android:layout_margin="3dp"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/considerDonate"
                            android:textColor="#012f54"
                            android:textSize="16dp"
                            android:textStyle="italic"/>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#ddd">
                    </FrameLayout>

                    <RadioGroup
                            android:id="@+id/radioGroup1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dip"
                                android:layout_weight="1"
                                android:background="#ddd">

                        </FrameLayout>

                        <LinearLayout
                                android:id="@+id/paypal"
                                android:layout_width="wrap_content"
                                android:layout_height="46dp"
                                android:layout_gravity="center"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/paypal"
                                android:gravity="right|center"
                                android:paddingLeft="15dip"
                                android:paddingRight="15dip">

                            <TextView
                                    android:id="@+id/TextView05"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="4dip"
                                    android:layout_weight="0.48"
                                    android:gravity="center"
                                    android:text="@string/donate"
                                    android:textColor="#FF000000"
                                    android:textSize="20sp"/>
                        </LinearLayout>

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/torrent_card"
                        android:layout_margin="3dp"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:id="@+id/linearLayout">

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dip"
                            android:layout_weight="1"
                            android:background="#ddd"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left">

                        <FrameLayout
                                android:layout_width="1dp"
                                android:layout_height="fill_parent"
                                android:layout_margin="3dp"
                                android:id="@+id/frameLayout"
                                android:layout_weight="1"/>

                        <FrameLayout
                                android:layout_width="1dp"
                                android:layout_height="fill_parent"
                                android:layout_margin="3dp"
                                android:background="#33000000"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>
